<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BullsAndCowsActivity">

    <Button
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="100dp"
        android:text="@string/Input"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b0" />

    <Button
        android:id="@+id/b9"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="20dp"
        android:text="@string/b9"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b8"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="20dp"
        android:text="@string/b8"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/b7"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/b6"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/b5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="260dp"
        android:onClick="onClickNumber"
        android:text="@string/b4"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toTopOf="@+id/b0" />

    <Button
        android:id="@+id/b3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="180dp"
        android:text="@string/b3"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toTopOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:text="@string/b2"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toTopOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <Button
        android:id="@+id/b1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:text="@string/b1"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toTopOf="@+id/b0"
        android:onClick="onClickNumber"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Мы загадали число"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="337dp"
        android:layout_height="201dp"
        android:layout_marginTop="-290dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="500dp">

            <TextView
                android:id="@+id/NumberAttempt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/UserNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/NumberCows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/NumberBull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/b0"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="416dp"
        android:onClick="onClickNumber"
        android:text="@string/b0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="184dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/b2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="188dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView1"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:srcCompat="@drawable/heart" />

</androidx.constraintlayout.widget.ConstraintLayout>